--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=G2B8_BED_GradedProject3
+spring.application.name=TicketTracker
+
+# server settings
+server.servlet.context-path=/tts
+server.port=9999
+
+# JDBC Settings
+spring.datasource.url=jdbc:mysql://localhost:3306/tts
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
