--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,47 @@
 spring.application.name=TicketTracker
-
+# logging.level.org.springframework.boot.autoconfigure=DEBUG
 # server settings
-server.servlet.context-path=/tts
+#server.servlet.context-path=ticket/list/
+#server.servlet.context-path=/tts
 server.port=9999
-
 # JDBC Settings
-spring.datasource.url=jdbc:mysql://localhost:3306/tts
-spring.datasource.username=root
-spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/tts
+#spring.datasource.username=root
+#spring.datasource.password=password
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database=h2
+#spring.jpa.hibernate.ddl-auto=update
+#org.hibernate.dialect.MySQLInnoDBDialect=org.hibernate.dialect.MySQL5InnoDBDialect
+# Security
+spring.autoconfigure.exclude[0]=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+spring.autoconfigure.exclude[1]=org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
+spring.autoconfigure.exclude[2]=org.springframework.boot.actuate.autoconfigure.security.servlet.ManagementWebSecurityAutoConfiguration
+springdoc.enable-spring-security=false
+#swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
+#H2 database config
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:tts
+spring.datasource.driverclassName=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.h2.console.path=/h2
+spring.sql.init.mode=always
+#actuator
+management.info.env.enabled=true
+management.info.build.enabled=true
+management.info.git.enabled=true
+management.info.java.enabled=true
+management.info.os.enabled=true
+#management.endpoints.web.exposure.include=info
+management.endpoints.web.exposure.include=metrices, info, health
+management.endpoints.web.base-path=/app/health
+# Actuator static info
+info.project.name=TicketTracker
+info.project.team=Self Team
+info.project.instructor=self
+#Actuator Dynamic info
+info.java-version=${java.version}
+info.java-vendor=${java.vendor}
